@@ -20,11 +20,7 @@ dirn=`dirname $earg`
 p=`abspath $dirn`
 export DEV_SUPPORT_HOME=$p
 
-<<<<<<< HEAD
-if [[ -z "${JAVA_HOME}" ]]; then 
-=======
 if [[ -z "${JAVA_HOME}" ]]; then
->>>>>>> env script
     export JAVA_HOME=/usr/lib/jvm/java-8-oracle
 fi
 
@@ -57,11 +53,7 @@ fi
 
 export GSA_JAVA_OPTIONS="-Xmx128m"
 export GSM_JAVA_OPTIONS="-Xmx128m"
-<<<<<<< HEAD
-export GSC_JAVA_OPTIONS="-Xmx3g -XX:MaxPermSize=1g -Darchaius.configurationSource.additionalUrls=file://${GIGASPACES_HOME}/bin/hystrix.properties"
-=======
 export GSC_JAVA_OPTIONS="-Xmx6g -Xms1g -Darchaius.configurationSource.additionalUrls=file://${GIGASPACES_HOME}/bin/hystrix.properties"
->>>>>>> env script
 
 export NUMBER_OF_GSCS=4
 source ${DEV_SUPPORT_HOME}/util/functions.sh
